--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "back",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/server.js",
+  "type": "module",
   "scripts": {
-    "start": "node app.js",
+    "start": "node src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
