--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
   "homepage": "https://github.com/assetmaker/back#readme",
   "description": "",
   "dependencies": {
-        "body-parser": "^2.2.0",
+    "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "node-fetch": "^3.3.2",
-    "openai": "^5.23.1"
+    "openai": "^5.23.1",
+    "uuid": "^13.0.0",
+    "ws": "^8.18.3"
   }
 }
