--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "form-data": "^4.0.5",
     "node-fetch": "^3.3.2",
     "openai": "^5.23.1",
     "uuid": "^13.0.0",
